# PathLib

./: CMakeLists.txt  README.md  build.bat
cmake/: PathLibConfig.cmake.in
include/PathLib/: PathLib.hpp
tests/: CMakeLists.txt  basic_path_construction_tests.cpp  error_handling_tests.cpp  file_system_object_status_tests.cpp  file_system_operations_tests.cpp  path_resolution_tests.cpp  status_flag_and_status_tests.cpp  symlink_mode_and_policy_tests.cpp  test_environment.hpp  wrapped_functions_tests.cpp
